# GuelderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  desktop.ini
GuelderCore/: CMakeLists.txt
GuelderCore/includes/GuelderEngine/: Application.hpp  GuelderEngine.hpp  GuelderEngine.ixx
GuelderCore/includes/GuelderEngine/Core/: Application.ixx  Core.ixx  Types.ixx
GuelderCore/includes/GuelderEngine/Events/: ApplicationEvent.hpp  ApplicationEvent.ixx  BaseEvent.ixx  Event.hpp  KeyEvent.hpp  KeyEvent.ixx  MouseEvent.hpp  MouseEvent.ixx
GuelderCore/includes/GuelderEngine/Layers/: Layer.hpp  Layer.ixx  LayerStack.hpp  LayerStack.ixx  Layers.ixx
GuelderCore/includes/GuelderEngine/Utils/: Debug.hpp  Debug.ixx  ResourceManager.hpp  ResourceManager.ixx  Utils.hpp
GuelderCore/includes/GuelderEngine/Vulkan/: Mesh.ixx
GuelderCore/private/headers/Core/: Window.ixx
GuelderCore/private/headers/Core/GObject/: GClass.hpp  GClass.ixx
GuelderCore/private/headers/Vulkan/: CommandPool.ixx  DebugManager.ixx  DeviceManager.ixx  FrameBuffer.ixx  FrameContext.ixx  FrameSync.ixx  IVulkanObject.ixx  Manager.ixx  MeshAllocator.ixx  Pipeline.ixx  QueueFamilyIndices.ixx  RenderSystem.ixx  Renderer.ixx  ShaderManager.ixx  Surface.ixx  Swapchain.ixx  SwapchainDepthImage.ixx  SwapchainFrame.ixx  SwapchainFrameSync.ixx  VertexBuffer.ixx  Vulkan.ixx
GuelderCore/private/headers/Vulkan/Buffers/: Buffer.ixx  Buffers.ixx  IBuffer.ixx  IndexBuffer.ixx  StagingBuffer.ixx  VertexBuffer.ixx
GuelderCore/private/headers/Vulkan/Descriptors/: DescriptorPool.ixx  DescriptorSetLayout.ixx
GuelderCore/private/sources/ActorComponents/: CameraComponent.cpp
GuelderCore/private/sources/Actors/: GObject.cpp  GameMode.cpp  KeyboardController.cpp  PlayerController.cpp  World.cpp
GuelderCore/private/sources/Core/: Application.cpp  Window.cpp
GuelderCore/private/sources/Layers/: LayerStack.cpp
GuelderCore/private/sources/Objects/: Actor.cpp  ActorComponent.cpp  Object2D.cpp  Object3D.cpp  ObjectBase.cpp  World.cpp
GuelderCore/private/sources/Renderer/: RenderSystem.cpp
GuelderCore/private/sources/UserInterface/: UserInterfaceManager.cpp
GuelderCore/private/sources/Utils/: Debug.cpp  ResourceManager.cpp
GuelderCore/private/sources/Vulkan/: CommandPool.cpp  DebugManager.cpp  DeviceManager.cpp  FrameBuffer.cpp  FrameContext.cpp  FrameSync.cpp  IBuffer.cpp  Manager.cpp  Mesh.cpp  Pipeline.cpp  QueueFamilyIndices.cpp  RenderSystem.cpp  Renderer.cpp  ShaderManager.cpp  Surface.cpp  Swapchain.cpp  SwapchainDepthImage.cpp  SwapchainFrame.cpp  SwapchainFrameSync.cpp  VertexBuffer.cpp
GuelderCore/private/sources/Vulkan/Buffers/: Buffer.cpp  IBuffer.cpp  IndexBuffer.cpp  StagingBuffer.cpp  VertexBuffer.cpp
GuelderCore/private/sources/Vulkan/Descriptors/: DescriptorPool.cpp  DescriptorSetLayout.cpp
GuelderCore/public/GuelderEngine/: GuelderEngine.hpp  GuelderEngine.ixx
GuelderCore/public/GuelderEngine/ActorComponents/: ActorComponent.ixx  CameraComponent.ixx  MeshComponent.ixx  RenderActorTransform.ixx
GuelderCore/public/GuelderEngine/Actors/: Actor.ixx  Actor2D.ixx  Actor3D.ixx  Actors.ixx  GObject.ixx  GameMode.ixx  KeyboardController.ixx  PlayerController.ixx  World.ixx
GuelderCore/public/GuelderEngine/Core/: Application.ixx  Core.ixx  Types.ixx  Utils.ixx
GuelderCore/public/GuelderEngine/Events/: ApplicationEvent.ixx  BaseEvent.ixx  Events.ixx  KeyEvent.ixx
GuelderCore/public/GuelderEngine/Layers/: Layer.ixx  LayerStack.ixx
GuelderCore/public/GuelderEngine/Objects/: Actor.ixx  ActorComponent.ixx  GObjectBase.ixx  Game.ixx  Object2D.ixx  Object3D.ixx  ObjectBase.ixx  World.ixx
GuelderCore/public/GuelderEngine/Renderer/: RenderSystem.ixx  Renderer.ixx
GuelderCore/public/GuelderEngine/UserInterface/: UserInterface.ixx  UserInterfaceManager.ixx
GuelderCore/public/GuelderEngine/Utils/: Debug.hpp  Debug.ixx  ResourceManager.ixx
GuelderCore/public/GuelderEngine/Vulkan/: Mesh.ixx  Vulkan.ixx
GuelderCore/src/headers/: Window.hpp
GuelderCore/src/headers/Core/: Window.ixx
GuelderCore/src/headers/Core/GObject/: GClass.hpp  GClass.ixx
GuelderCore/src/headers/Events/: Event.hpp
GuelderCore/src/headers/GObject/: GClass.hpp
GuelderCore/src/headers/Vulkan/: DebugManager.ixx  DeviceManager.ixx  IVulkanBase.ixx  IVulkanObject.ixx  Manager.ixx  Model.ixx  Pipeline.ixx  ShaderManager.ixx  Swapchain.ixx  SwapchainFrame.ixx  SwapchainFrameSync.ixx  Vulkan.ixx  VulkanCommandBuffer.ixx  VulkanCommandPool.ixx  VulkanDebugManager.hpp  VulkanDebugManager.ixx  VulkanDeviceManager.ixx  VulkanFrameBuffer.ixx  VulkanManager.hpp  VulkanManager.ixx  VulkanModel.ixx  VulkanPipeline.ixx  VulkanQueueFamilyIndices.ixx  VulkanShaderManager.ixx  VulkanSurfaceManager.ixx  VulkanSwapchain.ixx  VulkanSwapchainFrame.ixx  VulkanSwapchainFrameSync.ixx  VulkanSync.ixx
GuelderCore/src/sources/: Application.cpp  Window.cpp
GuelderCore/src/sources/Core/: Application.cpp  Window.cpp
GuelderCore/src/sources/Layers/: Layer.cpp  LayerStack.cpp
GuelderCore/src/sources/Utils/: Debug.cpp  ResourceManager.cpp
GuelderCore/src/sources/Vulkan/: DeviceManager.cpp  Manager.cpp  Pipeline.cpp  ShaderManager.cpp  Swapchain.cpp  SwapchainFrame.cpp  SwapchainFrameSync.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDebugManager.cpp  VulkanDeviceManager.cpp  VulkanFrameBuffer.cpp  VulkanManager.cpp  VulkanPipeline.cpp  VulkanQueueFamilyIndices.cpp  VulkanShaderManager.cpp  VulkanSurfaceManager.cpp  VulkanSwapchain.cpp  VulkanSwapchainFrame.cpp  VulkanSwapchainFrameSync.cpp  VulkanSync.cpp
GuelderEditor/: CMakeLists.txt
GuelderEditor/src/: CustomGame.hpp  main.cpp
Resources/: resources.txt
Resources/Shaders/: fragment.frag  fragment2D.frag  fragment3D.frag  vertex.vert  vertex2D.vert  vertex3D.vert
Resources/shaders/: fragment.glsl  fragment_simple.frag  vertex.shader  vertex_simple.vert
Resources/shaders/compiled/: compile_simple_shaders.bat
